# wgpu-sandboxes

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: deploy.yml
crates/01_hello_triangle/: Cargo.toml  README.md
crates/01_hello_triangle/src/: shader.wgsl  state.rs
crates/02_vertex_buffer/: Cargo.toml  README.md
crates/02_vertex_buffer/src/: shader.wgsl  state.rs
crates/03_index_buffer/: Cargo.toml  README.md
crates/03_index_buffer/src/: app.rs  state.rs
crates/04_vertex_color/: Cargo.toml  README.md
crates/04_vertex_color/src/: shader.wgsl  state.rs
crates/05_uniform_translation/: Cargo.toml  README.md
crates/05_uniform_translation/src/: app.rs  shader.wgsl  state.rs
crates/06_matrix_transform2d/: Cargo.toml  README.md
crates/06_matrix_transform2d/src/: shader.wgsl  state.rs
crates/07_texture_mapping/: Cargo.toml  README.md
crates/08_model_matrix3d/: Cargo.toml  README.md
crates/09_camera_perspective/: Cargo.toml  README.md
crates/10_depth_cube/: Cargo.toml  README.md
docs/: basic.md  index_buffer.md  uniform_buffer.md  vertex_color.md
docs/byai/: egui_ui_design_guide.md  grid_graphics_knowledge.md  lessons_learned_hybrid_simulation.md  wgpu_winit_egui_guide.md
docs/math/: matrix.md  vector.md
docs/other/: ca.md
docs/wgpu/: relation.md  vertex-buffer.md
docs/wgsl/: functions.md
examples/instancing_grid/: Cargo.toml
examples/instancing_grid/src/: app.rs  cells.rs  main.rs  shader.wgsl  state.rs
examples/shape/: Cargo.toml
examples/shape/src/: app.rs  main.rs  shader.wgsl  shape.rs  state.rs
projects/boids/: Cargo.toml  README.md  index.html
projects/boids/src/: app.rs  boids.rs  gpu.rs  main.rs  shader.wgsl
projects/fake_water/: Cargo.toml  index.html
projects/fake_water/src/: app.rs  config.rs  gpu.rs  main.rs  object.rs  shader.wgsl  utils.rs
projects/lifegame/: Cargo.toml  index.html
projects/lifegame/src/: app.rs  board.rs  cell.rs  main.rs  shader.wgsl  shape.rs  state.rs  utils.rs
projects/wolfram_ca/: Cargo.toml  index.html
projects/wolfram_ca/src/: app.rs  ca.rs  main.rs  shader.rs  state.rs
