[workspace]
members = ["crates/*", "examples/*", "lab", "projects/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
wgpu = "29.0.3"
bytemuck = "1.25.0"
winit = "0.30.13"
env_logger = "0.11.10"
log = "0.4.29"
pollster = "0.4.0"
rand = "0.10.1"
eframe = "0.34.2"
egui-winit = "0.34.2"
egui-wgpu = "0.34.2"
egui = "0.34.2"
