[package]
name = "matrix_transform2d"
version.workspace = true
edition.workspace = true

[dependencies]
wgpu = { workspace = true }
bytemuck = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
pollster = { workspace = true }
winit = { workspace = true }
glam = { version = "0.33.0", features = ["bytemuck"] }
