[package]
name = "lifegame"
version.workspace = true
edition.workspace = true

[dependencies]
wgpu = { workspace = true }
bytemuck = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
pollster = { workspace = true }
winit = { workspace = true }
rand = { workspace = true }
