[package]
name = "lifegame"
version.workspace = true
edition.workspace = true

[dependencies]
wgpu.workspace = true
bytemuck.workspace = true
env_logger.workspace = true
log.workspace = true
pollster.workspace = true
winit.workspace = true
rand.workspace = true
# eframe.workspace = true
egui-wgpu.workspace = true
egui.workspace = true
egui_plot.workspace = true
web-time = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
egui-winit = { version = "0.34.2", default-features = false }
wasm-bindgen = "0.2.122"
console_error_panic_hook = "0.1.7"
wasm-logger = "0.2.0"
wasm-bindgen-futures = "0.4.72"
web-sys = { version = "0.3.99", features = ["Document", "Window", "Element", "HtmlCanvasElement"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
getrandom_04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }
